# Task-Tracker-App

./: Readme.md  pyproject.toml
data/: todos.db
my_package/: __init__.py  __main__.py  database.py
