[tool.poetry]
name = "smriti-todo-cli"
version = "0.1.0"
description = "A simple command-line to-do application"
authors = ["Smriti Sah <your-email@example.com>"]
readme = "README.md"
packages = [{include = "my_package"}]  # <--- Add this line

[tool.poetry.scripts]
todocli = "my_package.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.0"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
